--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+title:  "&lt;Simple.Matter.of.Coding/&gt;"
+description: "Page not found."
 comments: false
 share: false
 permalink: /404.html
